# project_cd

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
src/: lib.rs  main.rs
src/clap_cli/: add.rs  init.rs  mod.rs  wrapper.rs
src/core/: add.rs  mod.rs  remove.rs  search.rs
src/domain/: backend.rs  cli.rs  mod.rs  project.rs
src/storage/: mod.rs
src/storage/toml/: init.rs  mod.rs  validator.rs
